--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,7 +12,7 @@
           <a class="nav-link" href="{{"/" | relative_url }}">Home</a>
         </li>
         <li class="nav-item">
-          <a href="https://mwhitmeyer.github.io">About</a>
+          <a href="https://mwhitmeyer.github.io">About Me</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{{ "/posts" | relative_url }}">Posts</a>
