--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -21,6 +21,16 @@
   font-weight: bold;
   font-style: normal;
 }
+.corollary {
+  display: block;
+  margin: 12px 0;
+  font-style: italic;
+}
+.corollary:before {
+  content: "Corollary.";
+  font-weight: bold;
+  font-style: normal;
+}
 .proof {
   display: block;
   margin: 12px 0;
